@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - a new script - npg_upload2climb - to perform the upload, which is
+   specified in the definition generated by the pp_archiver function
+
 release 57.12.0
  - a new function definition class npg_pipeline::function::pp_archiver,
    implementing two new pipeline functions - 'pp_archiver' and 
